# VanityForge

./: .gitignore  Cargo.toml  README.md  build.ps1  generate-word-variants.ps1  install.ps1  run.ps1  stop.ps1  uninstall.ps1  vanity.config.json  vanity.ps1
cpu/: README.md  build.ps1  run.ps1
gpu/: README.md  build.ps1  run.ps1  vanity_cuda.cu
patterns/prefixes/: example.txt
patterns/suffixes/: example.txt
src/: main.rs
vendor-solanity/src/cuda-ecc-ed25519/: ed25519.h  fixedint.h  keypair.cu
