[package]
name = "solana-vanity"
version = "0.1.0"
edition = "2024"
description = "VanityForge: config-driven Solana vanity address generator with CPU and CUDA GPU engines."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xD3bt/vanityforge"
homepage = "https://github.com/0xD3bt/vanityforge"
keywords = ["solana", "vanity", "crypto", "cuda", "gpu"]
categories = ["command-line-utilities", "cryptography"]
exclude = [
    "/runs/**",
    "/gpu/bin/**",
    "/gpu/generated_config.h",
    "/vendor-solanity/src/debug/**",
    "/.vs/**",
]

[dependencies]
anyhow = "1"
bs58 = "0.5"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
rand = { version = "0.8", features = ["small_rng"] }
serde_json = "1"
